Stable for amd64, wrt bug #433215
Package-Manager: portage-2.1.11.9/cvs/Linux x86_64

--- a/dev-java/netbeans-platform/ChangeLog
+++ b/dev-java/netbeans-platform/ChangeLog
@@ -1,6 +1,9 @@
 # ChangeLog for dev-java/netbeans-platform
 # Copyright 1999-2012 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/dev-java/netbeans-platform/ChangeLog,v 1.18 2012/10/17 03:04:58 phajdan.jr Exp $
+# $Header: /var/cvsroot/gentoo-x86/dev-java/netbeans-platform/ChangeLog,v 1.19 2012/10/17 11:07:54 ago Exp $
+
+  17 Oct 2012; Agostino Sarubbo <ago@gentoo.org> netbeans-platform-7.2.ebuild:
+  Stable for amd64, wrt bug #433215
 
   17 Oct 2012; Pawel Hajdan jr <phajdan.jr@gentoo.org>
   netbeans-platform-7.2.ebuild:
