--- a/app-emacs/yatex/ChangeLog
+++ b/app-emacs/yatex/ChangeLog
@@ -1,6 +1,9 @@
 # ChangeLog for app-emacs/yatex
 # Copyright 1999-2012 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/app-emacs/yatex/ChangeLog,v 1.40 2012/10/17 03:02:22 phajdan.jr Exp $
+# $Header: /var/cvsroot/gentoo-x86/app-emacs/yatex/ChangeLog,v 1.41 2012/10/17 11:26:05 blueness Exp $
+
+  17 Oct 2012; Anthony G. Basile <blueness@gentoo.org> yatex-1.76.ebuild:
+  stable ppc, bug #433187
 
   17 Oct 2012; Pawel Hajdan jr <phajdan.jr@gentoo.org> yatex-1.76.ebuild:
   x86 stable wrt bug #433187
