--- a/dev-python/pyside/ChangeLog
+++ b/dev-python/pyside/ChangeLog
@@ -1,6 +1,9 @@
 # ChangeLog for dev-python/pyside
 # Copyright 1999-2012 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/dev-python/pyside/ChangeLog,v 1.43 2012/10/17 06:41:32 kensington Exp $
+# $Header: /var/cvsroot/gentoo-x86/dev-python/pyside/ChangeLog,v 1.44 2012/10/17 12:00:38 ago Exp $
+
+  17 Oct 2012; Agostino Sarubbo <ago@gentoo.org> pyside-1.1.2.ebuild:
+  Stable for amd64, wrt bug #438390
 
   17 Oct 2012; Michael Palimaka <kensington@gentoo.org> pyside-1.1.1.ebuild,
   pyside-1.1.2.ebuild:
