--- a/dev-python/shiboken/ChangeLog
+++ b/dev-python/shiboken/ChangeLog
@@ -1,6 +1,9 @@
 # ChangeLog for dev-python/shiboken
 # Copyright 1999-2012 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/dev-python/shiboken/ChangeLog,v 1.35 2012/10/17 06:39:07 kensington Exp $
+# $Header: /var/cvsroot/gentoo-x86/dev-python/shiboken/ChangeLog,v 1.36 2012/10/17 12:00:26 ago Exp $
+
+  17 Oct 2012; Agostino Sarubbo <ago@gentoo.org> shiboken-1.1.2.ebuild:
+  Stable for amd64, wrt bug #438390
 
   17 Oct 2012; Michael Palimaka <kensington@gentoo.org> shiboken-1.1.1.ebuild,
   shiboken-1.1.2.ebuild:
