--- a/dev-util/pkgconf/ChangeLog
+++ b/dev-util/pkgconf/ChangeLog
@@ -1,6 +1,10 @@
 # ChangeLog for dev-util/pkgconf
 # Copyright 1999-2012 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/dev-util/pkgconf/ChangeLog,v 1.49 2012/08/26 17:41:02 jdhore Exp $
+# $Header: /var/cvsroot/gentoo-x86/dev-util/pkgconf/ChangeLog,v 1.50 2012/10/17 15:26:53 ryao Exp $
+
+  17 Oct 2012; Richard Yao <ryao@gentoo.org> pkgconf-0.8.5.ebuild,
+  pkgconf-0.8.7.ebuild, pkgconf-9999.ebuild:
+  Fix Homepage and GIT url
 
   26 Aug 2012; Jeff Horelick <jdhore@gentoo.org> pkgconf-9999.ebuild:
   Fix compile of -9999 ebuild
