--- a/dev-util/pkgconf/ChangeLog
+++ b/dev-util/pkgconf/ChangeLog
@@ -1,6 +1,12 @@
 # ChangeLog for dev-util/pkgconf
 # Copyright 1999-2012 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/dev-util/pkgconf/ChangeLog,v 1.50 2012/10/17 15:26:53 ryao Exp $
+# $Header: /var/cvsroot/gentoo-x86/dev-util/pkgconf/ChangeLog,v 1.51 2012/10/17 15:51:49 ryao Exp $
+
+*pkgconf-0.8.9 (17 Oct 2012)
+
+  17 Oct 2012; Richard Yao <ryao@gentoo.org> +pkgconf-0.8.9.ebuild,
+  pkgconf-0.8.5.ebuild, pkgconf-0.8.7.ebuild, pkgconf-9999.ebuild:
+  Bump pkgconf to 0.8.9
 
   17 Oct 2012; Richard Yao <ryao@gentoo.org> pkgconf-0.8.5.ebuild,
   pkgconf-0.8.7.ebuild, pkgconf-9999.ebuild:
