--- a/net-libs/libproxy/ChangeLog
+++ b/net-libs/libproxy/ChangeLog
@@ -1,6 +1,9 @@
 # ChangeLog for net-libs/libproxy
 # Copyright 1999-2012 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/net-libs/libproxy/ChangeLog,v 1.83 2012/10/17 12:58:16 jer Exp $
+# $Header: /var/cvsroot/gentoo-x86/net-libs/libproxy/ChangeLog,v 1.84 2012/10/17 19:07:17 maekke Exp $
+
+  17 Oct 2012; Markus Meier <maekke@gentoo.org> libproxy-0.4.10.ebuild:
+  arm stable, bug #438146
 
   17 Oct 2012; Jeroen Roovers <jer@gentoo.org> libproxy-0.4.10.ebuild:
   Stable for HPPA (bug #438146).
