--- a/media-video/mplayer/ChangeLog
+++ b/media-video/mplayer/ChangeLog
@@ -1,6 +1,9 @@
 # ChangeLog for media-video/mplayer
 # Copyright 1999-2012 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/media-video/mplayer/ChangeLog,v 1.859 2012/10/17 14:01:15 jer Exp $
+# $Header: /var/cvsroot/gentoo-x86/media-video/mplayer/ChangeLog,v 1.860 2012/10/17 19:14:41 maekke Exp $
+
+  17 Oct 2012; Markus Meier <maekke@gentoo.org> mplayer-1.1-r1.ebuild:
+  arm stable, bug #394809
 
   17 Oct 2012; Jeroen Roovers <jer@gentoo.org> mplayer-1.1-r1.ebuild:
   Stable for HPPA (bug #394809).
