--- a/net-print/cups-pk-helper/ChangeLog
+++ b/net-print/cups-pk-helper/ChangeLog
@@ -1,6 +1,9 @@
 # ChangeLog for net-print/cups-pk-helper
 # Copyright 1999-2012 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/net-print/cups-pk-helper/ChangeLog,v 1.19 2012/10/17 11:07:36 ago Exp $
+# $Header: /var/cvsroot/gentoo-x86/net-print/cups-pk-helper/ChangeLog,v 1.20 2012/10/17 19:17:31 maekke Exp $
+
+  17 Oct 2012; Markus Meier <maekke@gentoo.org> cups-pk-helper-0.2.4.ebuild:
+  arm stable, bug #438450
 
   17 Oct 2012; Agostino Sarubbo <ago@gentoo.org> cups-pk-helper-0.2.4.ebuild:
   Stable for amd64, wrt bug #438450
