--- a/www-client/google-chrome/ChangeLog
+++ b/www-client/google-chrome/ChangeLog
@@ -1,6 +1,13 @@
 # ChangeLog for www-client/google-chrome
 # Copyright 1999-2012 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/www-client/google-chrome/ChangeLog,v 1.205 2012/10/17 03:04:17 floppym Exp $
+# $Header: /var/cvsroot/gentoo-x86/www-client/google-chrome/ChangeLog,v 1.206 2012/10/17 21:15:20 floppym Exp $
+
+*google-chrome-23.0.1271.40_beta162221 (17 Oct 2012)
+
+  17 Oct 2012; Mike Gilbert <floppym@gentoo.org>
+  +google-chrome-23.0.1271.40_beta162221.ebuild,
+  -google-chrome-23.0.1271.26_beta160934.ebuild:
+  Beta channel bump.
 
 *google-chrome-24.0.1297.0_alpha162078 (17 Oct 2012)
 
