--- a/www-client/chromium/ChangeLog
+++ b/www-client/chromium/ChangeLog
@@ -1,6 +1,12 @@
 # ChangeLog for www-client/chromium
 # Copyright 1999-2012 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/www-client/chromium/ChangeLog,v 1.738 2012/10/13 02:35:47 floppym Exp $
+# $Header: /var/cvsroot/gentoo-x86/www-client/chromium/ChangeLog,v 1.739 2012/10/17 22:24:18 floppym Exp $
+
+*chromium-23.0.1271.40 (17 Oct 2012)
+
+  17 Oct 2012; Mike Gilbert <floppym@gentoo.org> +chromium-23.0.1271.40.ebuild,
+  -chromium-23.0.1271.17.ebuild, -chromium-23.0.1271.22.ebuild:
+  Beta channel bump.
 
 *chromium-23.0.1271.26 (13 Oct 2012)
 
