--- a/sys-kernel/hardened-sources/ChangeLog
+++ b/sys-kernel/hardened-sources/ChangeLog
@@ -1,6 +1,12 @@
 # ChangeLog for sys-kernel/hardened-sources
 # Copyright 1999-2012 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/sys-kernel/hardened-sources/ChangeLog,v 1.707 2012/10/17 22:56:49 blueness Exp $
+# $Header: /var/cvsroot/gentoo-x86/sys-kernel/hardened-sources/ChangeLog,v 1.708 2012/10/17 22:58:14 blueness Exp $
+
+*hardened-sources-3.2.31-r1 (17 Oct 2012)
+
+  17 Oct 2012; Anthony G. Basile <blueness@gentoo.org>
+  +hardened-sources-3.2.31-r1.ebuild:
+  vanilla-3.2.31 + genpatches-3.2-16 + grsecurity-2.9.1-3.2.31-201210121914
 
 *hardened-sources-2.6.32-r135 (17 Oct 2012)
 
