--- a/sys-kernel/hardened-sources/ChangeLog
+++ b/sys-kernel/hardened-sources/ChangeLog
@@ -1,6 +1,12 @@
 # ChangeLog for sys-kernel/hardened-sources
 # Copyright 1999-2012 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/sys-kernel/hardened-sources/ChangeLog,v 1.708 2012/10/17 22:58:14 blueness Exp $
+# $Header: /var/cvsroot/gentoo-x86/sys-kernel/hardened-sources/ChangeLog,v 1.709 2012/10/17 22:59:58 blueness Exp $
+
+*hardened-sources-3.6.2 (17 Oct 2012)
+
+  17 Oct 2012; Anthony G. Basile <blueness@gentoo.org>
+  +hardened-sources-3.6.2.ebuild:
+  vanilla-3.6.2 + genpatches-3.6-4 + grsecurity-2.9.1-3.6.2-201210151829
 
 *hardened-sources-3.2.31-r1 (17 Oct 2012)
 
