--- a/www-client/chromium/ChangeLog
+++ b/www-client/chromium/ChangeLog
@@ -1,6 +1,12 @@
 # ChangeLog for www-client/chromium
 # Copyright 1999-2012 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/www-client/chromium/ChangeLog,v 1.739 2012/10/17 22:24:18 floppym Exp $
+# $Header: /var/cvsroot/gentoo-x86/www-client/chromium/ChangeLog,v 1.740 2012/10/17 23:15:23 phajdan.jr Exp $
+
+*chromium-24.0.1297.0 (17 Oct 2012)
+
+  17 Oct 2012; Pawel Hajdan jr <phajdan.jr@gentoo.org>
+  +chromium-24.0.1297.0.ebuild, chromium-9999-r1.ebuild:
+  Dev channel bump.
 
 *chromium-23.0.1271.40 (17 Oct 2012)
 
