--- a/profiles/ChangeLog
+++ b/profiles/ChangeLog
@@ -1,10 +1,13 @@
 # ChangeLog for profile directory
 # Copyright 1999-2012 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/profiles/ChangeLog,v 1.7039 2012/10/16 08:31:59 patrick Exp $
+# $Header: /var/cvsroot/gentoo-x86/profiles/ChangeLog,v 1.7040 2012/10/18 06:28:26 kensington Exp $
 #
 # This ChangeLog should include records for all changes in profiles directory.
 # Only typo fixes which don't affect portage/repoman behaviour could be avoided
 # here. If in doubt put a record here!
+
+  18 Oct 2012; Michael Palimaka <kensington@gentoo.org> package.mask:
+  Mask net-libs/libwww for removal.
 
   16 Oct 2012; Patrick Lauer <patrick@gentoo.org> package.mask:
   Masking www-apache/mod_cplusplus
