--- a/sys-apps/portage/ChangeLog
+++ b/sys-apps/portage/ChangeLog
@@ -1,6 +1,15 @@
 # ChangeLog for sys-apps/portage
 # Copyright 1999-2012 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/sys-apps/portage/ChangeLog,v 1.1126 2012/10/17 04:34:22 zmedico Exp $
+# $Header: /var/cvsroot/gentoo-x86/sys-apps/portage/ChangeLog,v 1.1127 2012/10/18 06:58:43 zmedico Exp $
+
+*portage-2.1.11.30 (18 Oct 2012)
+
+  18 Oct 2012; Zac Medico <zmedico@gentoo.org> +portage-2.1.11.30.ebuild,
+  -portage-2.1.11.27.ebuild:
+  2.1.11.30 version bump. This fixes various issues with SLOT handling related
+  to EAPI 5 sub-slots, including keepdir failures. This also fixes bug #438640
+  (remove old binhost protocol, since it causes problems when using a proxy).
+  Bug #431026 tracks all bugs fixed since portage-2.1.11.9.
 
 *portage-2.2.0_alpha140 (17 Oct 2012)
 
