--- a/app-text/rtf2html/ChangeLog
+++ b/app-text/rtf2html/ChangeLog
@@ -1,6 +1,11 @@
 # ChangeLog for app-text/rtf2html
-# Copyright 1999-2009 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/app-text/rtf2html/ChangeLog,v 1.3 2009/01/03 22:53:39 halcy0n Exp $
+# Copyright 1999-2012 Gentoo Foundation; Distributed under the GPL v2
+# $Header: /var/cvsroot/gentoo-x86/app-text/rtf2html/ChangeLog,v 1.4 2012/10/18 08:12:24 pinkbyte Exp $
+
+*rtf2html-0.2.0-r1 (18 Oct 2012)
+
+  18 Oct 2012; Sergey Popov <pinkbyte@gentoo.org> +rtf2html-0.2.0-r1.ebuild:
+  Revision bump: EAPI 4, drop stage functions, use base eclass
 
   03 Jan 2009; Mark Loeser <halcy0n@gentoo.org>
   +files/rtf2html-0.2.0-gcc43.patch, rtf2html-0.2.0.ebuild:
