--- a/games-arcade/afternoonstalker/ChangeLog
+++ b/games-arcade/afternoonstalker/ChangeLog
@@ -1,6 +1,9 @@
 # ChangeLog for games-arcade/afternoonstalker
 # Copyright 1999-2012 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/games-arcade/afternoonstalker/ChangeLog,v 1.17 2012/09/05 21:10:18 mr_bones_ Exp $
+# $Header: /var/cvsroot/gentoo-x86/games-arcade/afternoonstalker/ChangeLog,v 1.18 2012/10/18 08:18:57 ago Exp $
+
+  18 Oct 2012; Agostino Sarubbo <ago@gentoo.org> afternoonstalker-1.1.5.ebuild:
+  Stable for amd64, wrt bug #438664
 
 *afternoonstalker-1.1.5 (05 Sep 2012)
 
