Keyword ~ppc ~ppc64 in anticipation of stabilization, bug #394809
Package-Manager: portage-2.1.11.9/cvs/Linux x86_64

--- a/media-video/mplayer/ChangeLog
+++ b/media-video/mplayer/ChangeLog
@@ -1,6 +1,9 @@
 # ChangeLog for media-video/mplayer
 # Copyright 1999-2012 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/media-video/mplayer/ChangeLog,v 1.860 2012/10/17 19:14:41 maekke Exp $
+# $Header: /var/cvsroot/gentoo-x86/media-video/mplayer/ChangeLog,v 1.861 2012/10/18 09:40:11 blueness Exp $
+
+  18 Oct 2012; Anthony G. Basile <blueness@gentoo.org> mplayer-1.1-r1.ebuild:
+  Keyword ~ppc ~ppc64 in anticipation of stabilization, bug #394809
 
   17 Oct 2012; Markus Meier <maekke@gentoo.org> mplayer-1.1-r1.ebuild:
   arm stable, bug #394809
