--- a/app-text/rtf2html/ChangeLog
+++ b/app-text/rtf2html/ChangeLog
@@ -1,6 +1,9 @@
 # ChangeLog for app-text/rtf2html
 # Copyright 1999-2012 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/app-text/rtf2html/ChangeLog,v 1.6 2012/10/18 09:36:24 pinkbyte Exp $
+# $Header: /var/cvsroot/gentoo-x86/app-text/rtf2html/ChangeLog,v 1.7 2012/10/18 10:04:18 pinkbyte Exp $
+
+  18 Oct 2012; Sergey Popov <pinkbyte@gentoo.org> rtf2html-0.2.0-r1.ebuild:
+  Add debug USE-flag, improve CFLAGS handling
 
   18 Oct 2012; Sergey Popov <pinkbyte@gentoo.org> rtf2html-0.2.0-r1.ebuild:
   Fix issue with incorrect parsing of '-g' compile flag in configure script.
