--- a/games-arcade/afternoonstalker/ChangeLog
+++ b/games-arcade/afternoonstalker/ChangeLog
@@ -1,6 +1,10 @@
 # ChangeLog for games-arcade/afternoonstalker
 # Copyright 1999-2012 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/games-arcade/afternoonstalker/ChangeLog,v 1.18 2012/10/18 08:18:57 ago Exp $
+# $Header: /var/cvsroot/gentoo-x86/games-arcade/afternoonstalker/ChangeLog,v 1.19 2012/10/18 10:39:17 blueness Exp $
+
+  18 Oct 2012; Anthony G. Basile <blueness@gentoo.org>
+  afternoonstalker-1.1.5.ebuild:
+  stable ppc, bug #438664
 
   18 Oct 2012; Agostino Sarubbo <ago@gentoo.org> afternoonstalker-1.1.5.ebuild:
   Stable for amd64, wrt bug #438664
