--- a/dev-python/snakeoil/ChangeLog
+++ b/dev-python/snakeoil/ChangeLog
@@ -1,6 +1,12 @@
 # ChangeLog for dev-python/snakeoil
 # Copyright 1999-2012 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/dev-python/snakeoil/ChangeLog,v 1.54 2012/09/30 07:33:09 ferringb Exp $
+# $Header: /var/cvsroot/gentoo-x86/dev-python/snakeoil/ChangeLog,v 1.55 2012/10/18 12:14:59 ferringb Exp $
+
+*snakeoil-0.5.2 (18 Oct 2012)
+
+  18 Oct 2012; Brian Harring <ferringb@gentoo.org> -snakeoil-0.5.ebuild,
+  +snakeoil-0.5.2.ebuild:
+  Fix doc generation for py3k.
 
 *snakeoil-0.5.1 (30 Sep 2012)
 
