--- a/dev-python/snakeoil/ChangeLog
+++ b/dev-python/snakeoil/ChangeLog
@@ -1,6 +1,9 @@
 # ChangeLog for dev-python/snakeoil
 # Copyright 1999-2012 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/dev-python/snakeoil/ChangeLog,v 1.55 2012/10/18 12:14:59 ferringb Exp $
+# $Header: /var/cvsroot/gentoo-x86/dev-python/snakeoil/ChangeLog,v 1.56 2012/10/18 12:18:50 ferringb Exp $
+
+  18 Oct 2012; Brian Harring <ferringb@gentoo.org> snakeoil-9999.ebuild:
+  Specify the versions of python snakeoil 9999 supports.
 
 *snakeoil-0.5.2 (18 Oct 2012)
 
