--- a/media-libs/opus/ChangeLog
+++ b/media-libs/opus/ChangeLog
@@ -1,6 +1,9 @@
 # ChangeLog for media-libs/opus
 # Copyright 1999-2012 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/media-libs/opus/ChangeLog,v 1.5 2012/09/17 12:02:56 yngwin Exp $
+# $Header: /var/cvsroot/gentoo-x86/media-libs/opus/ChangeLog,v 1.6 2012/10/18 12:45:10 lu_zero Exp $
+
+  18 Oct 2012; Luca Barbato <lu_zero@gentoo.org> opus-1.0.1.ebuild:
+  Add few arches
 
 *opus-1.0.1 (17 Sep 2012)
 
