--- a/sci-libs/libpdb++/ChangeLog
+++ b/sci-libs/libpdb++/ChangeLog
@@ -1,6 +1,10 @@
 # ChangeLog for sci-libs/libpdb++
 # Copyright 1999-2012 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/sci-libs/libpdb++/ChangeLog,v 1.2 2012/10/18 16:46:29 jlec Exp $
+# $Header: /var/cvsroot/gentoo-x86/sci-libs/libpdb++/ChangeLog,v 1.3 2012/10/18 16:57:39 jlec Exp $
+
+  18 Oct 2012; Justin Lecher <jlec@gentoo.org> libpdb++-040728-r1.ebuild,
+  files/libpdb++-040728-dynlib+flags.patch:
+  Fix silent errors
 
 *libpdb++-040728-r1 (18 Oct 2012)
 
