Make nss and metalink mutually exclusive, bug #433822
Package-Manager: portage-2.1.11.9/cvs/Linux x86_64

--- a/net-misc/curl/ChangeLog
+++ b/net-misc/curl/ChangeLog
@@ -1,6 +1,10 @@
 # ChangeLog for net-misc/curl
 # Copyright 1999-2012 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/net-misc/curl/ChangeLog,v 1.251 2012/10/14 18:57:02 blueness Exp $
+# $Header: /var/cvsroot/gentoo-x86/net-misc/curl/ChangeLog,v 1.252 2012/10/18 17:20:39 blueness Exp $
+
+  18 Oct 2012; Anthony G. Basile <blueness@gentoo.org> curl-7.27.0-r3.ebuild,
+  curl-7.28.0.ebuild:
+  Make nss and metalink mutually exclusive, bug #433822
 
   14 Oct 2012; Anthony G. Basile <blueness@gentoo.org> metadata.xml:
   Fixed typoes in metadata.xml, thanks radhermit
