--- a/sys-libs/timezone-data/ChangeLog
+++ b/sys-libs/timezone-data/ChangeLog
@@ -1,6 +1,9 @@
 # ChangeLog for sys-libs/timezone-data
 # Copyright 1999-2012 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/sys-libs/timezone-data/ChangeLog,v 1.272 2012/09/13 17:29:51 vapier Exp $
+# $Header: /var/cvsroot/gentoo-x86/sys-libs/timezone-data/ChangeLog,v 1.273 2012/10/18 17:28:41 vapier Exp $
+
+  18 Oct 2012; Mike Frysinger <vapier@gentoo.org> timezone-data-2012f.ebuild:
+  Stabilize for everyone.
 
 *timezone-data-2012f (13 Sep 2012)
 
