--- a/games-action/bzflag/ChangeLog
+++ b/games-action/bzflag/ChangeLog
@@ -1,6 +1,9 @@
 # ChangeLog for games-action/bzflag
 # Copyright 1999-2012 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/games-action/bzflag/ChangeLog,v 1.57 2012/09/14 07:48:37 tupone Exp $
+# $Header: /var/cvsroot/gentoo-x86/games-action/bzflag/ChangeLog,v 1.58 2012/10/18 17:41:23 mr_bones_ Exp $
+
+  18 Oct 2012; Michael Sterrett <mr_bones_@gentoo.org> bzflag-2.4.2.ebuild:
+  prune_libtool_files for bug #438818
 
 *bzflag-2.4.2 (14 Sep 2012)
 
