--- a/net-misc/curl/ChangeLog
+++ b/net-misc/curl/ChangeLog
@@ -1,6 +1,12 @@
 # ChangeLog for net-misc/curl
 # Copyright 1999-2012 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/net-misc/curl/ChangeLog,v 1.252 2012/10/18 17:20:39 blueness Exp $
+# $Header: /var/cvsroot/gentoo-x86/net-misc/curl/ChangeLog,v 1.253 2012/10/18 18:16:20 blueness Exp $
+
+*curl-7.28.0-r1 (18 Oct 2012)
+
+  18 Oct 2012; Anthony G. Basile <blueness@gentoo.org> +curl-7.28.0-r1.ebuild,
+  +files/curl-7.28.0-fix-http-auth.patch:
+  Patch to fix git/curl over http/https with auth, bug #438718
 
   18 Oct 2012; Anthony G. Basile <blueness@gentoo.org> curl-7.27.0-r3.ebuild,
   curl-7.28.0.ebuild:
