--- a/sys-libs/glibc/ChangeLog
+++ b/sys-libs/glibc/ChangeLog
@@ -1,5 +1,8 @@
 # ChangeLog for sys-libs/glibc
-# $Header: /var/cvsroot/gentoo-x86/sys-libs/glibc/ChangeLog,v 1.897 2012/10/18 19:42:28 ago Exp $
+# $Header: /var/cvsroot/gentoo-x86/sys-libs/glibc/ChangeLog,v 1.898 2012/10/18 19:43:10 ago Exp $
+
+  18 Oct 2012; <ago@gentoo.org> glibc-2.15-r3.ebuild:
+  Stable for x86, wrt bug #404993
 
   18 Oct 2012; <ago@gentoo.org> glibc-2.15-r3.ebuild:
   Stable for amd64, wrt bug #404993
