--- a/profiles/ChangeLog
+++ b/profiles/ChangeLog
@@ -1,10 +1,15 @@
 # ChangeLog for profile directory
 # Copyright 1999-2012 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/profiles/ChangeLog,v 1.7041 2012/10/18 21:18:07 jlec Exp $
+# $Header: /var/cvsroot/gentoo-x86/profiles/ChangeLog,v 1.7042 2012/10/18 22:58:22 aballier Exp $
 #
 # This ChangeLog should include records for all changes in profiles directory.
 # Only typo fixes which don't affect portage/repoman behaviour could be avoided
 # here. If in doubt put a record here!
+
+  18 Oct 2012; Alexis Ballier <aballier@gentoo.org> profiles.desc:
+  Advertise (very) experimental FreeBSD 9.1 profile with clang as system
+  compiler. Do not expect it to work yet, but help in getting it done is
+  welcome :).
 
   18 Oct 2012; Justin Lecher <jlec@gentoo.org> package.mask:
   Remove entry of dropped package
