--- a/eclass/ChangeLog
+++ b/eclass/ChangeLog
@@ -1,6 +1,9 @@
 # ChangeLog for eclass directory
 # Copyright 1999-2012 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/eclass/ChangeLog,v 1.452 2012/10/19 02:44:21 patrick Exp $
+# $Header: /var/cvsroot/gentoo-x86/eclass/ChangeLog,v 1.453 2012/10/19 03:35:15 patrick Exp $
+
+  19 Oct 2012; Patrick Lauer <patrick@gentoo.org> check-reqs.eclass:
+  Fixing units
 
   19 Oct 2012; Patrick Lauer <patrick@gentoo.org> check-reqs.eclass:
   Fixing binpkg behaviour
