--- a/app-text/calibre/ChangeLog
+++ b/app-text/calibre/ChangeLog
@@ -1,6 +1,10 @@
 # ChangeLog for app-text/calibre
 # Copyright 1999-2012 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/app-text/calibre/ChangeLog,v 1.233 2012/10/12 09:52:05 scarabeus Exp $
+# $Header: /var/cvsroot/gentoo-x86/app-text/calibre/ChangeLog,v 1.234 2012/10/19 05:05:52 zmedico Exp $
+
+  19 Oct 2012; Zac Medico <zmedico@gentoo.org> calibre-0.9.1.ebuild,
+  calibre-0.9.2.ebuild:
+  Require at least libmtp-1.1.4 for bug #438810.
 
   12 Oct 2012; Tomáš Chvátal <scarabeus@gentoo.org> -calibre-0.8.62.ebuild,
   calibre-0.9.1.ebuild:
