--- a/sys-fs/reiserfsprogs/ChangeLog
+++ b/sys-fs/reiserfsprogs/ChangeLog
@@ -1,6 +1,10 @@
 # ChangeLog for sys-fs/reiserfsprogs
 # Copyright 1999-2012 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/sys-fs/reiserfsprogs/ChangeLog,v 1.71 2012/05/26 18:24:58 armin76 Exp $
+# $Header: /var/cvsroot/gentoo-x86/sys-fs/reiserfsprogs/ChangeLog,v 1.72 2012/10/19 05:16:07 vapier Exp $
+
+  19 Oct 2012; Mike Frysinger <vapier@gentoo.org>
+  reiserfsprogs-3.6.21-r1.ebuild:
+  Add new URL for reiserfsprogs #438884 by Ghostshell.
 
   26 May 2012; Raúl Porcel <armin76@gentoo.org>
   reiserfsprogs-3.6.21-r1.ebuild:
