--- a/sys-fs/reiserfsprogs/ChangeLog
+++ b/sys-fs/reiserfsprogs/ChangeLog
@@ -1,6 +1,11 @@
 # ChangeLog for sys-fs/reiserfsprogs
 # Copyright 1999-2012 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/sys-fs/reiserfsprogs/ChangeLog,v 1.72 2012/10/19 05:16:07 vapier Exp $
+# $Header: /var/cvsroot/gentoo-x86/sys-fs/reiserfsprogs/ChangeLog,v 1.73 2012/10/19 05:16:41 vapier Exp $
+
+*reiserfsprogs-3.6.22 (19 Oct 2012)
+
+  19 Oct 2012; Mike Frysinger <vapier@gentoo.org> +reiserfsprogs-3.6.22.ebuild:
+  Version bump #438686 by Ivan S. Titov.
 
   19 Oct 2012; Mike Frysinger <vapier@gentoo.org>
   reiserfsprogs-3.6.21-r1.ebuild:
