--- a/app-text/calibre/ChangeLog
+++ b/app-text/calibre/ChangeLog
@@ -1,6 +1,11 @@
 # ChangeLog for app-text/calibre
 # Copyright 1999-2012 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/app-text/calibre/ChangeLog,v 1.234 2012/10/19 05:05:52 zmedico Exp $
+# $Header: /var/cvsroot/gentoo-x86/app-text/calibre/ChangeLog,v 1.235 2012/10/19 05:30:45 zmedico Exp $
+
+*calibre-0.9.3 (19 Oct 2012)
+
+  19 Oct 2012; Zac Medico <zmedico@gentoo.org> +calibre-0.9.3.ebuild:
+  0.9.3 version bump.
 
   19 Oct 2012; Zac Medico <zmedico@gentoo.org> calibre-0.9.1.ebuild,
   calibre-0.9.2.ebuild:
