--- a/app-emulation/winetricks/ChangeLog
+++ b/app-emulation/winetricks/ChangeLog
@@ -1,6 +1,10 @@
 # ChangeLog for app-emulation/winetricks
 # Copyright 1999-2012 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/app-emulation/winetricks/ChangeLog,v 1.9 2012/10/19 05:50:00 tetromino Exp $
+# $Header: /var/cvsroot/gentoo-x86/app-emulation/winetricks/ChangeLog,v 1.10 2012/10/19 05:57:41 tetromino Exp $
+
+  19 Oct 2012; Alexandre Rostovtsev <tetromino@gentoo.org>
+  winetricks-916.ebuild, winetricks-99999999.ebuild:
+  Only install .desktop file and icon if USE=gtk or USE=kde.
 
 *winetricks-916 (19 Oct 2012)
 
