--- a/x11-drivers/nvidia-drivers/ChangeLog
+++ b/x11-drivers/nvidia-drivers/ChangeLog
@@ -1,6 +1,12 @@
 # ChangeLog for x11-drivers/nvidia-drivers
 # Copyright 1999-2012 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/x11-drivers/nvidia-drivers/ChangeLog,v 1.401 2012/10/17 13:12:13 jer Exp $
+# $Header: /var/cvsroot/gentoo-x86/x11-drivers/nvidia-drivers/ChangeLog,v 1.402 2012/10/19 06:07:13 cardoe Exp $
+
+*nvidia-drivers-304.60 (19 Oct 2012)
+
+  19 Oct 2012; Doug Goldstein <cardoe@gentoo.org>
+  +nvidia-drivers-304.60.ebuild:
+  Version bump.
 
 *nvidia-drivers-173.14.36 (17 Oct 2012)
 
