--- a/sci-libs/arpack/ChangeLog
+++ b/sci-libs/arpack/ChangeLog
@@ -1,6 +1,10 @@
 # ChangeLog for sci-libs/arpack
 # Copyright 1999-2012 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/sci-libs/arpack/ChangeLog,v 1.44 2012/10/18 21:11:23 jlec Exp $
+# $Header: /var/cvsroot/gentoo-x86/sci-libs/arpack/ChangeLog,v 1.45 2012/10/19 07:09:41 jlec Exp $
+
+  19 Oct 2012; Justin Lecher <jlec@gentoo.org> +arpack-0.96-r3.ebuild,
+  -arpack-96-r3.ebuild:
+  drop old
 
   18 Oct 2012; Justin Lecher <jlec@gentoo.org> -arpack-0.96-r3.ebuild,
   arpack-3.0.2.ebuild, arpack-3.1.1.ebuild, arpack-3.1.2.ebuild,
