--- a/dev-lang/smlnj/ChangeLog
+++ b/dev-lang/smlnj/ChangeLog
@@ -1,6 +1,13 @@
 # ChangeLog for dev-lang/smlnj
-# Copyright 1999-2010 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/dev-lang/smlnj/ChangeLog,v 1.23 2010/06/29 12:13:03 ssuominen Exp $
+# Copyright 1999-2012 Gentoo Foundation; Distributed under the GPL v2
+# $Header: /var/cvsroot/gentoo-x86/dev-lang/smlnj/ChangeLog,v 1.24 2012/10/19 09:31:58 hkbst Exp $
+
+*smlnj-110.75 (19 Oct 2012)
+
+  19 Oct 2012; Marijn Schouten <hkBst@gentoo.org> -smlnj-110.0.7.ebuild,
+  -smlnj-110.45.ebuild, -smlnj-110.67-r1.ebuild, -smlnj-110.67-r2.ebuild,
+  -smlnj-110.69.ebuild, +smlnj-110.75.ebuild:
+  bump and remove old stuff
 
   29 Jun 2010; Samuli Suominen <ssuominen@gentoo.org> smlnj-110.71.ebuild:
   Respect environment flags and targets wrt #243886 by Michael Weber.
