--- a/app-officeext/texmaths/ChangeLog
+++ b/app-officeext/texmaths/ChangeLog
@@ -1,6 +1,13 @@
 # ChangeLog for app-officeext/texmaths
 # Copyright 1999-2012 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/app-officeext/texmaths/ChangeLog,v 1.6 2012/08/21 08:39:00 scarabeus Exp $
+# $Header: /var/cvsroot/gentoo-x86/app-officeext/texmaths/ChangeLog,v 1.7 2012/10/19 17:52:06 dilfridge Exp $
+
+*texmaths-0.36a (19 Oct 2012)
+
+  19 Oct 2012; Andreas K. Huettel <dilfridge@gentoo.org>
+  +texmaths-0.36a.ebuild:
+  Add re-packed oxt that removes the 'bug workaround' which breaks with lo-3.6
+  ...
 
   21 Aug 2012; Tomáš Chvátal <scarabeus@gentoo.org> -texmaths-0.35.ebuild,
   texmaths-0.36.ebuild:
