--- a/app-officeext/texmaths/ChangeLog
+++ b/app-officeext/texmaths/ChangeLog
@@ -1,6 +1,9 @@
 # ChangeLog for app-officeext/texmaths
 # Copyright 1999-2012 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/app-officeext/texmaths/ChangeLog,v 1.7 2012/10/19 17:52:06 dilfridge Exp $
+# $Header: /var/cvsroot/gentoo-x86/app-officeext/texmaths/ChangeLog,v 1.8 2012/10/19 17:54:37 dilfridge Exp $
+
+  19 Oct 2012; Andreas K. Huettel <dilfridge@gentoo.org> texmaths-0.36a.ebuild:
+  Better SRC_URI
 
 *texmaths-0.36a (19 Oct 2012)
 
