--- a/dev-libs/gmime/ChangeLog
+++ b/dev-libs/gmime/ChangeLog
@@ -1,6 +1,13 @@
 # ChangeLog for dev-libs/gmime
 # Copyright 1999-2012 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/dev-libs/gmime/ChangeLog,v 1.209 2012/10/16 04:12:11 blueness Exp $
+# $Header: /var/cvsroot/gentoo-x86/dev-libs/gmime/ChangeLog,v 1.210 2012/10/19 18:51:02 pacho Exp $
+
+*gmime-2.6.11 (19 Oct 2012)
+
+  19 Oct 2012; Pacho Ramos <pacho@gentoo.org> +gmime-2.6.11.ebuild,
+  -gmime-2.2.27.ebuild, -gmime-2.4.28.ebuild, -gmime-2.6.1.ebuild,
+  -gmime-2.6.9.ebuild:
+  Version bump, drop old.
 
   16 Oct 2012; Anthony G. Basile <blueness@gentoo.org> gmime-2.6.10.ebuild:
   stable ppc, bug #427544
