dodoc now skips html files by default with eapi4 and, then, doins workaround is no longer needed. Thanks a lot to Zac Medico in bug #438978 for the explanation.
Package-Manager: portage-2.1.11.24/cvs/Linux x86_64

--- a/dev-libs/gmime/ChangeLog
+++ b/dev-libs/gmime/ChangeLog
@@ -1,6 +1,11 @@
 # ChangeLog for dev-libs/gmime
 # Copyright 1999-2012 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/dev-libs/gmime/ChangeLog,v 1.210 2012/10/19 18:51:02 pacho Exp $
+# $Header: /var/cvsroot/gentoo-x86/dev-libs/gmime/ChangeLog,v 1.211 2012/10/19 19:13:36 pacho Exp $
+
+  19 Oct 2012; Pacho Ramos <pacho@gentoo.org> gmime-2.6.11.ebuild:
+  dodoc now skips html files by default with eapi4 and, then, doins workaround
+  is no longer needed. Thanks a lot to Zac Medico in bug #438978 for the
+  explanation.
 
 *gmime-2.6.11 (19 Oct 2012)
 
