--- a/eclass/ChangeLog
+++ b/eclass/ChangeLog
@@ -1,6 +1,10 @@
 # ChangeLog for eclass directory
 # Copyright 1999-2012 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/eclass/ChangeLog,v 1.453 2012/10/19 03:35:15 patrick Exp $
+# $Header: /var/cvsroot/gentoo-x86/eclass/ChangeLog,v 1.454 2012/10/19 19:55:51 mgorny Exp $
+
+  19 Oct 2012; Michał Górny <mgorny@gentoo.org> distutils-r1.eclass:
+  Call no-op default phases for each implementation (meaningless but more
+  correct).
 
   19 Oct 2012; Patrick Lauer <patrick@gentoo.org> check-reqs.eclass:
   Fixing units
