--- a/www-plugins/chrome-binary-plugins/ChangeLog
+++ b/www-plugins/chrome-binary-plugins/ChangeLog
@@ -1,6 +1,10 @@
 # ChangeLog for www-plugins/chrome-binary-plugins
 # Copyright 1999-2012 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/www-plugins/chrome-binary-plugins/ChangeLog,v 1.1 2012/10/19 20:10:37 zx2c4 Exp $
+# $Header: /var/cvsroot/gentoo-x86/www-plugins/chrome-binary-plugins/ChangeLog,v 1.2 2012/10/19 20:18:58 zx2c4 Exp $
+
+  19 Oct 2012; Jason A. Donenfeld <zx2c4@gentoo.org>
+  chrome-binary-plugins-9999.ebuild:
+  Per floppym's suggestion, use unpacker class.
 
 *chrome-binary-plugins-9999 (19 Oct 2012)
 
