--- a/net-libs/libsoup/ChangeLog
+++ b/net-libs/libsoup/ChangeLog
@@ -1,6 +1,10 @@
 # ChangeLog for net-libs/libsoup
 # Copyright 1999-2012 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/net-libs/libsoup/ChangeLog,v 1.292 2012/10/16 04:46:44 blueness Exp $
+# $Header: /var/cvsroot/gentoo-x86/net-libs/libsoup/ChangeLog,v 1.293 2012/10/20 06:10:33 tetromino Exp $
+
+  20 Oct 2012; Alexandre Rostovtsev <tetromino@gentoo.org>
+  libsoup-2.36.1.ebuild, libsoup-2.36.1-r1.ebuild, libsoup-2.38.1.ebuild:
+  Disable apache-using tests in a cleaner way.
 
   16 Oct 2012; Anthony G. Basile <blueness@gentoo.org> libsoup-2.38.1.ebuild:
   stable ppc, bug #427544
