--- a/net-libs/libsoup/ChangeLog
+++ b/net-libs/libsoup/ChangeLog
@@ -1,6 +1,10 @@
 # ChangeLog for net-libs/libsoup
 # Copyright 1999-2012 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/net-libs/libsoup/ChangeLog,v 1.293 2012/10/20 06:10:33 tetromino Exp $
+# $Header: /var/cvsroot/gentoo-x86/net-libs/libsoup/ChangeLog,v 1.294 2012/10/20 06:16:02 tetromino Exp $
+
+  20 Oct 2012; Alexandre Rostovtsev <tetromino@gentoo.org>
+  libsoup-2.36.1.ebuild, libsoup-2.36.1-r1.ebuild, libsoup-2.38.1.ebuild:
+  trivial: reorder src_prepare and src_configure.
 
   20 Oct 2012; Alexandre Rostovtsev <tetromino@gentoo.org>
   libsoup-2.36.1.ebuild, libsoup-2.36.1-r1.ebuild, libsoup-2.38.1.ebuild:
