Convert from modprobe install to softdep wrt #396147 by Gustavo Sverzut Barbieri
Package-Manager: portage-2.2.0_alpha135/cvs/Linux x86_64

--- a/sys-apps/kmod/ChangeLog
+++ b/sys-apps/kmod/ChangeLog
@@ -1,5 +1,12 @@
 # ChangeLog for sys-apps/kmod
-# $Header: /var/cvsroot/gentoo-x86/sys-apps/kmod/ChangeLog,v 1.52 2012/10/20 07:12:46 ssuominen Exp $
+# $Header: /var/cvsroot/gentoo-x86/sys-apps/kmod/ChangeLog,v 1.53 2012/10/20 09:30:13 ssuominen Exp $
+
+*kmod-10-r2 (20 Oct 2012)
+
+  20 Oct 2012; Samuli Suominen <ssuominen@gentoo.org> +kmod-10-r2.ebuild,
+  kmod-9999.ebuild:
+  Convert from modprobe install to softdep wrt #396147 by Gustavo Sverzut
+  Barbieri
 
 *kmod-10-r1 (20 Oct 2012)
 
