--- a/net-analyzer/munin/files/munin-asyncd.init.2
+++ b/net-analyzer/munin/files/munin-asyncd.init.2
@@ -1,7 +1,7 @@
 #!/sbin/runscript
 # Copyright 1999-2012 Gentoo Foundation
 # Distributed under the terms of the GNU General Public License v2
-# $Header: /var/cvsroot/gentoo-x86/net-analyzer/munin/files/munin-asyncd.init.2,v 1.3 2012/10/21 06:00:13 flameeyes Exp $
+# $Header: /var/cvsroot/gentoo-x86/net-analyzer/munin/files/munin-asyncd.init.2,v 1.4 2012/10/22 01:57:41 flameeyes Exp $
 
 command=/usr/libexec/munin/munin-asyncd
 command_args="--fork"
@@ -14,7 +14,7 @@ depend() {
 }
 
 start_pre() {
-	checkpath -d -o munin-async -m 0700 /var/spool/munin-async
+	checkpath -d -o munin-async:munin -m 0750 /var/spool/munin-async
 }
 
 # vim: filetype=gentoo-init-d:
