Shorten two long lines.
Package-Manager: portage-2.2.0_alpha141/cvs/Linux x86_64
Manifest-Sign-Key: 0xA792A613

--- a/www-plugins/adobe-flash/ChangeLog
+++ b/www-plugins/adobe-flash/ChangeLog
@@ -1,6 +1,9 @@
 # ChangeLog for www-plugins/adobe-flash
 # Copyright 1999-2012 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/www-plugins/adobe-flash/ChangeLog,v 1.143 2012/10/22 05:27:48 jer Exp $
+# $Header: /var/cvsroot/gentoo-x86/www-plugins/adobe-flash/ChangeLog,v 1.144 2012/10/22 05:35:09 jer Exp $
+
+  22 Oct 2012; Jeroen Roovers <jer@gentoo.org> adobe-flash-11.2.202.243.ebuild:
+  Shorten two long lines.
 
 *adobe-flash-11.2.202.243 (22 Oct 2012)
 
