--- a/sys-kernel/vanilla-sources/ChangeLog
+++ b/sys-kernel/vanilla-sources/ChangeLog
@@ -1,6 +1,9 @@
 # ChangeLog for sys-kernel/vanilla-sources
 # Copyright 1999-2012 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/sys-kernel/vanilla-sources/ChangeLog,v 1.1065 2012/10/21 16:52:48 mpagano Exp $
+# $Header: /var/cvsroot/gentoo-x86/sys-kernel/vanilla-sources/ChangeLog,v 1.1066 2012/10/22 10:42:44 ago Exp $
+
+  22 Oct 2012; Agostino Sarubbo <ago@gentoo.org> vanilla-sources-3.5.7.ebuild:
+  Stable for X86, wrt bug #432426
 
 *vanilla-sources-3.6.3 (21 Oct 2012)
 
